// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts \`theme\` prop 1`] = `
.c0 {
  font-family: Roboto Slab,serif;
  font-size: 34px;
  line-height: 1.1764;
  color: black;
}

<h1
  className="c0"
/>
`;

exports[`renders 1`] = `
.c0 {
  font-family: Roboto Slab,serif;
  font-size: 34px;
  line-height: 1.1764;
}

<h1
  className="c0"
/>
`;
